posiGen_FullsendBox/src/objects/Deferment__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Deal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deal</label>
        <referenceTo>Deal__c</referenceTo>
        <relationshipLabel>Deferments</relationshipLabel>
        <relationshipName>Deferments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <inlineHelpText>Number of days the deferment is effective</inlineHelpText>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Final_Approval_Date__c</fullName>
        <label>Final Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LD_Lease__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LD Lease</label>
        <referenceTo>LD_Lease__c</referenceTo>
        <relationshipLabel>Deferments</relationshipLabel>
        <relationshipName>Deferments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Deferments</relationshipLabel>
        <relationshipName>Deferments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pre_Approval_Date__c</fullName>
        <label>Pre-Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Assume Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EE Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hardship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment Restructuring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Production issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Property Damage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service issue</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submission_Date__c</fullName>
        <label>Submission Date</label>
        <type>Date</type>
    </fields>
    <label>Deferment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DEF-{0000}</displayFormat>
        <label>Deferment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deferments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>